@@ -1,3 +1,7 @@
+2004-04-25  Andreas Jaeger  <aj@suse.de>
+
+        * mark.c (GC_mark_from): Use pointer as prefetch argument.
+
 2004-04-06  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* include/private/gcconfig.h (PREFETCH): Use __builtin_prefetch
